stop scroll on mobile

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -32,6 +32,7 @@ main {
 body.modal-open {
   overflow: hidden;
   height: 100%;
+  touch-action: none;
 }
 @media only screen and (min-width: 1920px) {
     main {
